--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
       <header>
         <span class="ribbon-outer">
           <span class="ribbon-inner">
-            <h1>Yanfei-qiao.GitHub.io</h1>
-            <h2></h2>
+            <h1>乔彦飞的GitHub</h1>
+            <h2>2017-2-20</h2>
           </span>
           <span class="left-tail"></span>
           <span class="right-tail"></span>
